tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier8UV-AAAAAAAAAAAAAAAAAAAALQ==__ActuallyCopyingC-AAAAAAAAAAAAAAAAAAAKmg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2714,
  "prerequisites": [
    2713
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To copy a culture, you'll need\n1) A Sterilized Petri Dish\n2) A Plasma Membrane (made from Stemcells, or gotten while making EnzymesSollution)\n3) Stemcells\n4) A Data Orb with the appropriate data on it\n5) Liquid DNA\n6) A UV Bio Lab\n7) A Clonal Cellular Synthesis Module\n\nYou can change out the Data Orb for one with whatever culture you wish to copy. Keep in mind that it might be easier to make a second culture the normal way, and that there's generally an alternative recipe that uses the fluid it produces to make it with a higher chance.\n\nPS: This recipe is the only one in NEI that uses this module, so you can find it if you look, but the number will change, so I can't specify which page.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Actually Copying Cultures",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2713
  ],
  "rewards": [],
  "tasks": []
}
