tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier8UV-AAAAAAAAAAAAAAAAAAAALQ==__AllGoodThings-AAAAAAAAAAAAAAAAAAAKVw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2647,
  "prerequisites": [
    2642,
    2613
  ],
  "properties": {
    "auto_claim": false,
    "desc": "So you've built your T7 rocket. Great, there's only one more left. Until then, the new places you can visit are: Haumea, the Kuiper Belt, Makemake, and Pluto.\n\nPluto is just before the Kuiper Belt, and Haumea and Makemake are just after.\n\nThe new veins are Black Plutonium, Garnet, Red Garnet. The ores are: Black Plutonium, Borax, Chrysotile, Garnet Sand, Nether Star, Realgar, Red Garnet, and Yellow Garnet.\n\nDon't forget the planet blocks!\n\nThe last schematic is on Pluto. This is also the last dungeon.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "All Good Things...",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2642,
    2613
  ],
  "rewards": [],
  "tasks": []
}
