tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier8UV-AAAAAAAAAAAAAAAAAAAALQ==__DNASamplesforCop-AAAAAAAAAAAAAAAAAAAKmA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2712,
  "prerequisites": [
    2711
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To copy cultures, you'll need to make a DNA sample first. Many of these have low chances, but this one's 100%. I'm sure you can figure it out yourself, but keep in mind that the Modules are not consumed, and that you may wish to use one of the IC2 Crops for the Detergent materials.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "DNA Samples for Copying Cultures",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2711
  ],
  "rewards": [],
  "tasks": []
}
