tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier8UV-AAAAAAAAAAAAAAAAAAAALQ==__DataOrbsforCopyi-AAAAAAAAAAAAAAAAAAAKmQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2713,
  "prerequisites": [
    2712
  ],
  "properties": {
    "auto_claim": false,
    "desc": "After getting your sample you need to encode the information to a Data Orb. Again, many times you'll have to do it repeatedly (the Data Orb is given back if it fails), but in this case it's 100%.\n\n[note]Look at the uses of the eColi DNA Sample to see the recipe.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Data Orbs for Copying Cultures",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2712
  ],
  "rewards": [],
  "tasks": []
}
